--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
+    "drizzle-kit": "^0.19.13",
     "drizzle-orm": "^0.28.6",
     "lucide-react": "^0.284.0",
     "next": "13.5.4",
@@ -29,6 +31,7 @@
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
+    "pg": "^8.11.3",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
