--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^4.25.3",
     "@neondatabase/serverless": "^0.6.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^4.36.1",
     "aws-sdk": "^2.1472.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
