--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.25.3",
     "@neondatabase/serverless": "^0.6.0",
+    "@pinecone-database/pinecone": "^1.1.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.36.1",
     "aws-sdk": "^2.1472.0",
