--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "drizzle-orm": "^0.28.6",
     "langchain": "^0.0.166",
     "lucide-react": "^0.284.0",
+    "md5": "^2.3.0",
     "next": "13.5.4",
+    "openai-edge": "^1.2.2",
     "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
@@ -34,6 +36,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/md5": "^2.3.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
