--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
     "lucide-react": "^0.290.0",
     "next": "14.0.0",
@@ -27,8 +28,10 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "drizzle-kit": "^0.19.13",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
+    "pg": "^8.11.3",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
