--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.441.0",
     "@clerk/nextjs": "^4.26.1",
     "@neondatabase/serverless": "^0.6.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.7.2",
     "aws-sdk": "^2.1488.0",
+    "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
@@ -22,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
